# Infraware

./: .gitignore  CLEANUP_COMPLETE.md  COMPLETE_USER_GUIDE.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  OPEN_SOURCE_GUIDE.md  QUICKSTART.md  README.MD  RESTRUCTURING_COMPLETE.md  SECURITY.md  TESTING_COMPLETE.md  install.ps1  install.sh  pyproject.toml  requirements.txt  test.tf  webapp.py
config/pricing/: aws_pricing.yaml  azure_pricing.yaml  gcp_pricing.yaml
docs/: COST_ANALYSIS_GUIDE.md
infraware/: main.py
pricing/: default-pricing.yaml
rules/: aws_ebs_enhanced.yaml  aws_ebs_unencrypted.yaml  aws_ec2_security.yaml  aws_elb_security.yaml  aws_iam_security.yaml  aws_kms_security.yaml  aws_lambda_security.yaml  aws_logging_security.yaml  aws_rds_security.yaml  aws_s3_enhanced.yaml  aws_s3_public.yaml  enhanced_security_rules.yaml  kubernetes_security_rules.yaml  vpc_enhanced.yaml  vpc_flow_logs.yaml
snap/: snapcraft.yaml
src/infraware/: awez.txt  ikram.txt  main.py  main_enhanced.py
src/infraware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/infraware/commands/: cost.py  (+17 more)
test-dir/: test.yaml
test_terraform_code/: advanced_test.json  advanced_test.tf  aws_production.tf  azure_production.tf  complex_terraform_plan.json  complex_vulnerable_infrastructure.yaml  complex_vulnerable_multi_cloud.tf  comprehensive_aws_test.json  cost_test.tf  docker_compose_test.yaml  gcp_production.tf  kubernetes_clusters.tf  kubernetes_test.yaml  production_plan.json  real_infrastructure.json  terraform.binary  test.tf  tfplan.binary  tfplan.json
(+14 files in other folders)
